# ComputerGraphics

./: RayTrace.sln
RayTrace/: 3ds.cpp  CMakeLists.txt  NormalRenderer.h  Ray.h  RayTrace.h  RayTrace.vcxproj  RayTrace.vcxproj.filters  Scene.h  Scene1.xml  Scene2.xml  SceneMaterial.h  Texture.h  Tools.h  Utils.h  snowman.xml  starter.cpp  test - Copy.xml  test.xml
RayTrace/buildXcode/: CMakeCache.txt  cmake_install.cmake
RayTrace/buildXcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
RayTrace/buildXcode/Raytrace.xcodeproj/: project.pbxproj
RayTrace/buildXcode/Raytrace.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RayTrace/buildXcode/Raytrace.xcodeproj/project.xcworkspace/xcshareddata/: Raytrace.xccheckout
RayTrace/buildXcode/Raytrace.xcodeproj/project.xcworkspace/xcuserdata/telabru.xcuserdatad/: UserInterfaceState.xcuserstate
RayTrace/buildXcode/Raytrace.xcodeproj/xcuserdata/telabru.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  RayTrace.xcscheme  RayTraceIncludes.xcscheme  (+2 more)
RayTrace/buildXcode/include/: cmake_install.cmake
RayTrace/buildXcode/src/main/cpp/: cmake_install.cmake
RayTrace/include/: 3ds.h  CMakeLists.txt  Constants.h  NormalRenderer.h  Ray.h  RayTrace.h  Scene.h  SceneBackground.h  SceneLight.h  SceneMaterialMgr.h  SceneModel.h  SceneObject.h  SceneObjectType.h  SceneSphere.h  SceneTriangle.h  Tools.h  Utils.h
RayTrace/include/GL/: glut.h
RayTrace/src/main/cpp/: 3ds.cpp  CMakeLists.txt  NormalRenderer.cpp  Ray.cpp  Scene.cpp  starter.cpp
